--- a/resume/style.css
+++ b/resume/style.css
@@ -9,11 +9,14 @@ BODY {
 }
 
 /*my name at top*/
-h1{
+#name{
 	font-size: 3em;
 	color: #33485e;
 	text-transform: uppercase;
 	text-align: center;
+	border-bottom: 1px solid #33485e;
+	width: 60%;
+	margin: 0 auto;
 }
 
 /*my industry*/
@@ -21,23 +24,25 @@ h1{
 but I didn't remember if b was used elsewhere
 and wanted to be discriminatory that it was just
 for this instance of b*/
-.title{
+b{
 	text-transform: uppercase;
 	font-size: 1.5em;
 	color: #33485e;
 }
 
 /*section headers, like EDUCATION*/
-h2{
+.sectionheader{
 	font-size: 1.5em;
 	text-transform: uppercase;
 	background-color: #33485e;
 	color: #fff;
-	/*weight is already set by BODY*/
+	margin: 20px 0px 10px 0px;
+	width: 70%;
+	min-width: 300px;
 }
 
 /*job titles at each past workplace*/
-h3{
+.jobtitle{
 	font-weight: 600;
 	font-size: 1.5em;
 }
