--- a/Resume/style.css
+++ b/Resume/style.css
@@ -13,6 +13,12 @@
 	font-family:'Montserrat', sans-serif;;
 }
 
+.social{
+	margin-left: 30px;
+	font-size:30px;
+	color: black;
+}
+
 #logo{
 	width: 46px;
 	height: 46px;
