dropped in text

--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -26,9 +26,14 @@ p{
 	text-transform: uppercase;
 }
 
-.chapter-top{
+.chatter{
 	font-family: Hind, sans-serif;
 	font-size: 2em;
+	font-weight:600;
+}
+
+.chapter-top{
+	
 }
 
 .photo{
