--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -1,44 +1,122 @@
 #body{
 	width:80%;
 	margin: 0 auto;
+	font-family: Hind,sans-serif;
+	font-size: 1em;
 }
 
 #top{
-	background-color: black;
-	color:white;
+	text-align: center;
+	width: 100%;
+	font-family:'Noto Serif',serif;
+	background-color: white;
+	position: fixed;
+	top: 0;
+	z-index: 1000;
 }
 
-p{
-	font-size:1em;
+/* hero splash */
+
+#hero{
+ 	position: relative;
+ 	width:100%;
+ 	margin-bottom: 30px;
+}
+
+.hero-pic{
+	width:100%;
+}
+
+.hero-txt{
+	position: absolute;
+	top: 10%;
+	width:100%;
+	font-size: 3em;
+	text-align: center;
+ 	font-weight:600;
+ 	font-family:'Noto Serif',serif;
+}
+
+/* headers */
+
+.chatter{
+	font-family:'Noto Serif',serif;
+	font-size: 1.3em;
+	font-weight:600;
+	background:#cef2d8;
+	padding: 1% 5%;
+}
+
+.chatter-cred{
+	font-weight:300;
+	font-style:italic;
 }
 
 #headline{
-	font-family: Hind, sans-serif;
-	font-size: 3.5em;
+	font-size: 3em;
 	text-align: center;
 	margin-bottom: 2px;
+	font-family:'Noto Serif',serif;
 }
 
-#byline{
+.byline{
 	font-family: Hind, sans-serif;
 	font-size: 1.5em;
 	text-align: center;
 	text-transform: uppercase;
 }
 
-.chatter{
-	font-family: Hind, sans-serif;
-	font-size: 2em;
-	font-weight:600;
+.chapter-top{
+	font-size:1.25em;
+	font-family:'Noto Serif',serif;
+
 }
 
-.chapter-top{
-	
+/* colors */
+
+.green{
+	color:green;
+}
+
+.black{
+	color:black;
+}
+
+.white{
+	color: white;
+	text-decoration: underline;
+}
+
+/* links */
+
+.box{
+	border: 3px solid #cef2d8;
+	padding: 5px;
+	margin: 5px;
+}
+
+a{
+	color: black;
+}
+
+a:hover{
+	font-weight: 600;
+	color:#2d5e25;
+	text-decoration: none;
+}
+
+/* photo */
+
+.float-photo{
+	display: inline-block;
+	margin-left: 20px;
+	float: right;
+	width: 50%;
 }
 
 .photo{
 	width:80%;
-	margin: 0 auto;
+	margin: 40px auto;
 }
 
 .caption{
@@ -49,8 +127,9 @@ p{
 .photo-cred{
 	margin-left: 5px;
 	text-transform: uppercase;
-
 }
+
+/* footer */
 
 #footer{	
 	padding-top:10px;
@@ -65,4 +144,48 @@ p{
 }
 .container p{
 	text-align: center
+}
+
+.container .chatter{
+	width:100%;
+}
+
+/* media queries */
+
+@media screen and (max-width: 1100px){
+	.hero-txt{
+		font-size:2em;
+	}
+}
+
+@media screen and (max-width: 720px){
+	.hero-txt{
+		font-size: 1.5em;
+	}
+	.float-photo{
+		width:100%;
+	}
+	.photo{
+		width:100%;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.hero-txt{
+		font-size:1em;
+		top:17%;
+	}
+	#body{
+		font-size:.9em;
+		width: 90%;
+	}
+	.chatter{
+		font-size: 1.2em;
+	}
+	#headline{
+		font-size:2.4em;
+	}
+	#byline{
+		font-size:1.2em;
+	}
 }
